--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
-        go-version: '1.21'
+        go-version: '1.23'
 
     - name: Set up Node.js
       uses: actions/setup-node@v4
@@ -30,32 +30,25 @@ jobs:
         cache: 'npm'
         cache-dependency-path: frontend/package-lock.json
 
-    - name: Install frontend dependencies
-      run: |
-        cd frontend
-        npm ci
-
-    - name: Lint frontend (Ubuntu only)
-      if: matrix.os == 'ubuntu-latest'
-      run: |
-        cd frontend
-        npm run lint || echo "Linting completed with warnings"
-
-    - name: Build frontend
-      run: |
-        cd frontend
-        npm run build
+    - name: Install Wails3
+      run: go install github.com/wailsapp/wails/v3/cmd/wails3@latest
 
     - name: Install Linux dependencies
       if: matrix.os == 'ubuntu-latest'
       run: |
         sudo apt-get update
-        sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev
+        sudo apt-get install -y build-essential pkg-config libgtk-3-dev libwebkit2gtk-4.1-dev
 
-    - name: Test Go build
+    - name: Install macOS dependencies
+      if: matrix.os == 'macos-latest'
       run: |
-        go mod tidy
-        go build -v .
+        xcode-select --install || echo "Xcode command line tools already installed"
+
+    - name: Check dependencies
+      run: wails3 doctor
+
+    - name: Test build
+      run: wails3 build
 
     - name: Run Go tests
       run: |
