--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -62,50 +62,17 @@ jobs:
       matrix:
         include:
           - os: windows-latest
-            goos: windows
-            goarch: amd64
-            extension: .exe
             name: windows-amd64
-            archive_cmd: '7z a pm2-manager-${{ matrix.name }}.zip pm2-manager-${{ matrix.name }}/'
             asset_name: pm2-manager-windows-amd64.zip
-          - os: windows-latest
-            goos: windows
-            goarch: arm64
-            extension: .exe
-            name: windows-arm64
-            archive_cmd: '7z a pm2-manager-${{ matrix.name }}.zip pm2-manager-${{ matrix.name }}/'
-            asset_name: pm2-manager-windows-arm64.zip
           - os: macos-latest
-            goos: darwin
-            goarch: amd64
-            extension: ""
-            name: macos-amd64
-            archive_cmd: 'tar -czf pm2-manager-${{ matrix.name }}.tar.gz pm2-manager-${{ matrix.name }}/'
-            asset_name: pm2-manager-macos-amd64.tar.gz
-          - os: macos-latest
-            goos: darwin
-            goarch: arm64
-            extension: ""
-            name: macos-arm64
-            archive_cmd: 'tar -czf pm2-manager-${{ matrix.name }}.tar.gz pm2-manager-${{ matrix.name }}/'
-            asset_name: pm2-manager-macos-arm64.tar.gz
+            name: macos-universal
+            asset_name: pm2-manager-macos-universal.tar.gz
           - os: ubuntu-latest
-            goos: linux
-            goarch: amd64
-            extension: ""
             name: linux-amd64
-            archive_cmd: 'tar -czf pm2-manager-${{ matrix.name }}.tar.gz pm2-manager-${{ matrix.name }}/'
             asset_name: pm2-manager-linux-amd64.tar.gz
-          - os: ubuntu-latest
-            goos: linux
-            goarch: arm64
-            extension: ""
-            name: linux-arm64
-            archive_cmd: 'tar -czf pm2-manager-${{ matrix.name }}.tar.gz pm2-manager-${{ matrix.name }}/'
-            asset_name: pm2-manager-linux-arm64.tar.gz
 
     runs-on: ${{ matrix.os }}
-    
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
@@ -113,7 +80,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
-        go-version: '1.21'
+        go-version: '1.23'
 
     - name: Set up Node.js
       uses: actions/setup-node@v4
@@ -122,87 +89,108 @@ jobs:
         cache: 'npm'
         cache-dependency-path: frontend/package-lock.json
 
-    - name: Install frontend dependencies
-      run: |
-        cd frontend
-        npm ci
-
-    - name: Build frontend
-      run: |
-        cd frontend
-        npm run build
+    - name: Install Wails3
+      run: go install github.com/wailsapp/wails/v3/cmd/wails3@latest
 
     - name: Install Linux dependencies
       if: matrix.os == 'ubuntu-latest'
       run: |
         sudo apt-get update
-        sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev
+        sudo apt-get install -y build-essential pkg-config libgtk-3-dev libwebkit2gtk-4.1-dev
+
+    - name: Install macOS dependencies
+      if: matrix.os == 'macos-latest'
+      run: |
+        xcode-select --install || echo "Xcode command line tools already installed"
+
+    - name: Check dependencies
+      run: wails3 doctor
 
     - name: Build application
-      env:
-        GOOS: ${{ matrix.goos }}
-        GOARCH: ${{ matrix.goarch }}
-        CGO_ENABLED: 1
-      run: |
-        if [ "${{ matrix.os }}" = "windows-latest" ]; then
-          go build -ldflags="-H windowsgui -s -w" -o pm2-manager${{ matrix.extension }} .
-        else
-          go build -ldflags="-s -w" -o pm2-manager${{ matrix.extension }} .
-        fi
-      shell: bash
+      run: wails3 build
 
-    - name: Create package
+    - name: Package application
+      run: wails3 package
+
+    - name: Create distribution package
       run: |
-        mkdir -p pm2-manager-${{ matrix.name }}
-        cp pm2-manager${{ matrix.extension }} pm2-manager-${{ matrix.name }}/
-        cp README.md pm2-manager-${{ matrix.name }}/
-        cp README_zh.md pm2-manager-${{ matrix.name }}/
-        
+        mkdir -p dist/pm2-manager-${{ matrix.name }}
+
+        # Copy built application
+        if [ "${{ matrix.os }}" = "windows-latest" ]; then
+          cp bin/*.exe dist/pm2-manager-${{ matrix.name }}/
+        elif [ "${{ matrix.os }}" = "macos-latest" ]; then
+          cp -r bin/*.app dist/pm2-manager-${{ matrix.name }}/ || cp bin/* dist/pm2-manager-${{ matrix.name }}/
+        else
+          cp bin/* dist/pm2-manager-${{ matrix.name }}/
+        fi
+
+        # Copy documentation
+        cp README.md dist/pm2-manager-${{ matrix.name }}/
+        cp README_zh.md dist/pm2-manager-${{ matrix.name }}/
+        cp CHANGELOG.md dist/pm2-manager-${{ matrix.name }}/
+
         # Create installation instructions
         if [ "${{ matrix.os }}" = "windows-latest" ]; then
-          cat > pm2-manager-${{ matrix.name }}/README_INSTALL.txt << 'EOF'
+          cat > dist/pm2-manager-${{ matrix.name }}/INSTALL.txt << 'EOF'
         PM2 Manager - Installation Instructions
         ======================================
-        
-        1. Ensure PM2 is installed:
-           npm install -g pm2
-        
-        2. Run pm2-manager.exe to start the application
-        
-        3. If you encounter any issues, please check:
-           - PM2 is properly installed and accessible
-           - Node.js is installed for PM2 functionality
-        
+
+        1. Prerequisites:
+           - Ensure Node.js is installed
+           - Install PM2 globally: npm install -g pm2
+
+        2. Installation:
+           - Extract this archive to your desired location
+           - Double-click the .exe file to run the application
+
+        3. Usage:
+           - The application will automatically detect your PM2 installation
+           - If PM2 is not found, install it using: npm install -g pm2
+
         For more information, see README.md
         EOF
         else
-          cat > pm2-manager-${{ matrix.name }}/install.sh << 'EOF'
+          cat > dist/pm2-manager-${{ matrix.name }}/install.sh << 'EOF'
         #!/bin/bash
-        echo "PM2 Manager - Installation"
-        echo "=========================="
+        echo "PM2 Manager Installation"
+        echo "======================="
         echo ""
-        echo "1. Ensuring PM2 is installed..."
+
+        # Check for PM2
         if ! command -v pm2 &> /dev/null; then
-            echo "PM2 not found. Please install it first:"
-            echo "npm install -g pm2"
-            exit 1
+            echo "⚠ PM2 not found. Installing PM2..."
+            if command -v npm &> /dev/null; then
+                npm install -g pm2
+                echo "✓ PM2 installed successfully"
+            else
+                echo "✗ npm not found. Please install Node.js and npm first"
+                echo "  Then run: npm install -g pm2"
+                exit 1
+            fi
+        else
+            echo "✓ PM2 is already installed"
         fi
-        echo "PM2 is installed ✓"
+
+        # Make executable
+        chmod +x pm2-manager* 2>/dev/null || chmod +x *.app/Contents/MacOS/* 2>/dev/null || true
+        echo "✓ Made application executable"
+
         echo ""
-        echo "2. Making pm2-manager executable..."
-        chmod +x pm2-manager
-        echo "Done ✓"
-        echo ""
-        echo "3. You can now run: ./pm2-manager"
+        echo "Installation complete! Run the application to start PM2 Manager"
         EOF
-          chmod +x pm2-manager-${{ matrix.name }}/install.sh
-          chmod +x pm2-manager-${{ matrix.name }}/pm2-manager
+          chmod +x dist/pm2-manager-${{ matrix.name }}/install.sh
         fi
       shell: bash
 
     - name: Create archive
       run: |
-        ${{ matrix.archive_cmd }}
+        cd dist
+        if [ "${{ matrix.os }}" = "windows-latest" ]; then
+          powershell -command "Compress-Archive -Path 'pm2-manager-${{ matrix.name }}' -DestinationPath 'pm2-manager-${{ matrix.name }}.zip'"
+        else
+          tar -czf pm2-manager-${{ matrix.name }}.tar.gz pm2-manager-${{ matrix.name }}/
+        fi
       shell: bash
 
     - name: Upload Release Asset
@@ -211,6 +199,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ needs.create-release.outputs.upload_url }}
-        asset_path: ./pm2-manager-${{ matrix.name }}.${{ matrix.os == 'windows-latest' && 'zip' || 'tar.gz' }}
+        asset_path: ./dist/pm2-manager-${{ matrix.name }}.${{ matrix.os == 'windows-latest' && 'zip' || 'tar.gz' }}
         asset_name: ${{ matrix.asset_name }}
         asset_content_type: ${{ matrix.os == 'windows-latest' && 'application/zip' || 'application/gzip' }}
