--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,7 @@ jobs:
             platform: 'darwin/universal'
             asset_name_suffix: 'macos-universal.dmg'
             # 这是打包成 dmg 后的最终路径
-            asset_path: 'build/bin/pm2-manager.dmg'
+            asset_path: 'pm2-manager.dmg'
             wails_os: 'darwin'
     
     runs-on: ${{ matrix.os }}
@@ -71,18 +71,3 @@ jobs:
           --app-drop-link 600 185 \
           "$GITHUB_WORKSPACE/build/bin/pm2-manager.dmg" \
           "$GITHUB_WORKSPACE/build/bin/pm2-manager.app"
-
-    - name: Upload binaries to GitHub Release
-      uses: softprops/action-gh-release@v2
-      with:
-        token: ${{ secrets.GITHUB_TOKEN }}
-        # 根据推送到哪个分支来命名 Release 标题
-        name: "Release ${{ github.ref_name }}"
-        # 使用固定的 'latest' 标签，每次都会更新这个 Release
-        tag_name: latest
-        # 需要上传的文件路径 (从 matrix 中获取)
-        files: ${{ matrix.asset_path }}
-        # 在 Release 中显示的资源名称 (例如: pm2-manager-windows-amd64.exe)
-        asset_name: pm2-manager-${{ matrix.asset_name_suffix }}
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
