--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,6 +54,10 @@ jobs:
     - name: Check dependencies
       run: wails3 doctor
 
+    - name: Configure npm for Apple Silicon (ARM64)
+      if: matrix.os == 'macos-latest'
+      run: npm config set arch arm64
+
     - name: Build Wails project (macOS)
       if: matrix.os == 'macos-latest'
       run: wails3 task ${{ matrix.wails_os }}:package:universal
