--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -85,11 +85,12 @@ jobs:
       if: matrix.os == 'macos-latest'
       run: |
         brew install create-dmg
+        mkdir -p dmg-temp
+        cp -R bin/pm2-manager.app dmg-temp/
         create-dmg \
           --volname "PM2 Manager" \
-          --app-drop-link 600 185 \
           "pm2-manager.dmg" \
-          "$GITHUB_WORKSPACE/build/bin/pm2-manager.app"
+          "dmg-temp/pm2-manager.app"
 
     - name: Verify build artifacts (Windows)
       if: matrix.os == 'windows-latest'
